--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -75,3 +75,13 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none;    /* Firefox */
 }
+
+/* Убрать стрелочки у input[type=number] во всех браузерах */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
